Fixed overflow

--- a/styles/usuario/comentarios.css
+++ b/styles/usuario/comentarios.css
@@ -211,6 +211,7 @@ textarea {
 .cajaComentario p {
     word-break: break-all; 
     font-family: "Pixelify Sans", sans-serif;
+    width: 100%;
 }
 
 .nombre {
